--- a/museum-adaptive/style.css
+++ b/museum-adaptive/style.css
@@ -82,7 +82,9 @@ li {
 .relative {
   position: relative;
 }
-
+.slider-img {
+  width: 100%;
+}
 .slider-container {
   position: absolute;
   right: 0;
@@ -92,6 +94,24 @@ li {
   position: relative;
   z-index: 1;
   margin-bottom: 272px;
+}
+.burger-menu {
+  display: none;
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+}
+
+.burger-open {
+  background-image: url("./assets/svg/burger.svg");
+  width: 32px;
+  height: 18px;
+}
+
+.burger-close {
+  background-image: url("./assets/svg/close.svg");
+  width: 25px;
+  height: 25px;
 }
 
 .mt-75 {
@@ -109,7 +129,7 @@ li {
 
 .cards {
   gap: 80px 60px;
-  max-width: 1440px;
+  /* max-width: 1440px; */
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
@@ -309,11 +329,12 @@ nav li a {
 
 .container {
   margin: 0 auto;
-  width: 1440px;
+  max-width: 1440px;
 }
 .section {
   padding-top: 75px;
   padding-bottom: 75px;
+  transition: opacity 0.2s linear;
 }
 .dark-section {
   background-color: #030303;
@@ -411,9 +432,37 @@ nav li a {
   height: 254px;
   margin-bottom: 127px;
 }
-
+#Gallery {
+  padding-bottom: 0;
+}
 .gallery {
-  height: 2051px;
+  display: block;
+  padding-bottom: 0;
+  overflow-y: hidden;
+}
+
+.gallery h2 {
+  margin: 0;
+  padding-bottom: 77px;
+}
+.picture-outer-container {
+  height: 1960px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  overflow-y: hidden;
+}
+.column-gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.column-1 {
+  margin-top: 50px;
+}
+.column-3 {
+  margin-top: 50px;
 }
 
 .big-play {
@@ -982,4 +1031,395 @@ footer::after {
 }
 .counter-pic span {
   letter-spacing: 2px;
+}
+
+@media (max-width: 1024px) {
+  /* HEADER */
+  .container {
+    width: 984px;
+  }
+  .chicha {
+    height: 130px;
+  }
+  .burger-menu {
+    display: block;
+  }
+  /* WELCOME */
+  .heading-text {
+    font-size: 50px;
+    letter-spacing: 5px;
+    line-height: 90px;
+  }
+  .heading-text-container {
+    margin-top: 48px;
+    margin-bottom: 45px;
+  }
+  .heading-text-container p {
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 2px;
+  }
+  .slider-container {
+    width: 700px;
+  }
+  .heading-text-container button {
+    background: #710707;
+    border-radius: 10px;
+    width: 300px;
+    height: 60px;
+    margin-top: 48px;
+    font-size: 20px;
+    line-height: 23px;
+  }
+  .pb-media {
+    padding-bottom: 147px;
+  }
+  .square-bullet {
+    width: 12px;
+    height: 12px;
+  }
+  .counter {
+    margin-left: 203px;
+  }
+  .arrows {
+    margin-right: 53px;
+  }
+  .counter-pic {
+    width: 700px;
+  }
+  .counter-pic span {
+    font-size: 20px;
+  }
+  .squares {
+    width: 160px;
+  }
+
+  /* VISITING */
+  .mt-75 {
+    margin-top: 55px;
+  }
+  .underline-title::after {
+    bottom: -14px;
+  }
+  .img-card {
+    width: 330px;
+    height: 215px;
+  }
+  .flex-container cards {
+    padding: 0 108px;
+  }
+  .mb-103 {
+    margin-bottom: 74px;
+  }
+  .media-cards {
+    padding: 0 108px;
+    font-size: 28px;
+    line-height: 31px;
+    /* letter-spacing: 5px; */
+  }
+  .card {
+    width: 330px;
+    /* gap: 61px 40px; */
+  }
+  .cards {
+    margin-bottom: 58px;
+  }
+  .media-text-cards {
+    font-size: 28px;
+    line-height: 31px;
+    letter-spacing: 5px;
+  }
+  .letter-spacing3 {
+    letter-spacing: 3px;
+  }
+  .underline-card::after {
+    bottom: -10px;
+    width: 46%;
+  }
+  .card-paragraph {
+    font-size: 20px;
+  }
+  .card-text {
+    margin-bottom: 18px;
+  }
+  .small-paragraph {
+    font-size: 16px;
+    margin-top: 8px;
+  }
+  .media-cards {
+    gap: 60px 60px;
+  }
+  .underline-card_::after {
+    bottom: -10px;
+    width: 46%;
+  }
+
+  /* EXPLORE */
+  .section {
+    padding-top: 54px;
+    padding-bottom: 60px;
+  }
+  .hidden {
+    display: none;
+  }
+  .text-explore {
+    max-width: 100%;
+  }
+  .flex-column {
+    flex-direction: column;
+  }
+  .mb-106 {
+    margin-bottom: 74px;
+  }
+  .p-text {
+    font-size: 20px;
+    line-height: 38px;
+  }
+  .pb-25 {
+    padding-bottom: 0px;
+  }
+  .slider-container-explore {
+    margin-left: 131px;
+    margin-top: 29px;
+  }
+  /* VIDEO */
+  .player-container {
+    margin-top: 31px;
+    margin-bottom: 39px;
+    height: 504px;
+  }
+  .big-play {
+    background-size: 152px 152px;
+    height: 152px;
+    background-repeat: no-repeat;
+    width: 152px;
+  }
+  .fullscreen {
+    background-size: 26px 26px;
+    height: 26px;
+    width: 26px;
+  }
+  .player-container video {
+    height: 444px;
+  }
+  .volume {
+    background-size: 26px 20px;
+    height: 20px;
+    width: 26px;
+  }
+  .controls {
+    height: 60px;
+    justify-content: space-evenly;
+  }
+  .video-slider > iframe {
+    width: 300px;
+    height: 170px;
+  }
+  .video-controls {
+    margin-bottom: 61px;
+  }
+  .progress {
+    width: 564px;
+    height: 5px;
+  }
+  .volume-progress {
+    width: 143px;
+  }
+  .padding {
+    padding-bottom: 27px;
+  }
+  /* GALLERY */
+  .gallery {
+    height: 1400px;
+  }
+  .section {
+    padding-bottom: 33px;
+  }
+  /* TICKETS */
+  #Tickets {
+    padding-top: 59px;
+    padding-bottom: 53px;
+  }
+  .pic-tic {
+    width: 700px;
+    height: 440px;
+  }
+  .ticket-form {
+    display: none;
+  }
+  .pic-and-ticket {
+    justify-content: start;
+    margin-bottom: 60px;
+  }
+  .pd {
+    padding-bottom: 19px;
+  }
+  .ticket-amount {
+    padding-left: 25px;
+    padding-bottom: 31px;
+  }
+  .ticket-amount__input {
+    text-align: center;
+  }
+  .tickets-and-total {
+    padding-left: 55px;
+  }
+  .ticket-amount__basic {
+    padding-bottom: 10px;
+  }
+  .ticket-amount__senior {
+    padding-top: 30px;
+    padding-bottom: 9px;
+  }
+  .total {
+    margin: 24px 0 69px 25px;
+  }
+  .buy-now {
+    margin-left: 25px;
+  }
+
+  /* CONTACTS */
+  #Contacts {
+    margin-bottom: 59px;
+  }
+  .map-pic {
+    width: 694px;
+    height: 454px;
+  }
+  .name-museum {
+    font-size: 24px;
+    line-height: 28px;
+    padding-bottom: 36px;
+  }
+  .address-text {
+    padding-bottom: 16px;
+    font-size: 20px;
+    line-height: 23px;
+  }
+  /* FOOTER */
+  .logo-foot {
+    padding-top: 53px;
+    max-width: 194px;
+  }
+  .footer-nav {
+    padding-top: 37px;
+    padding-right: 0px;
+    max-width: 313px;
+    margin-left: 45px;
+  }
+
+  .footer-nav ul li:nth-child(1),
+  .footer-nav ul li:nth-child(2),
+  .footer-nav ul li:nth-child(3) {
+    margin-right: 30px;
+  }
+
+  .footer-nav ul li:nth-child(4),
+  .footer-nav ul li:nth-child(5),
+  .footer-nav ul li:nth-child(6) {
+    margin-left: 44.5px;
+  }
+
+  .footer nav ul li a {
+    padding: 0;
+  }
+
+  .socials {
+    padding-bottom: 0;
+  }
+  footer::after {
+    top: 243px;
+  }
+
+  .footer-1 {
+    justify-content: unset;
+  }
+  .socials li {
+    padding: 0;
+  }
+
+  .socials {
+    margin-left: 92px;
+    justify-content: flex-start;
+  }
+
+  .socials ul {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .nav-header {
+    opacity: 0;
+    position: absolute;
+    top: 147px;
+    left: 59px;
+    z-index: 500;
+    transition: opacity 0.2s linear;
+  }
+
+  .nav-header ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .li-header {
+    margin-left: 0;
+    margin-top: 25px;
+  }
+
+  .nav-header ul li a {
+    width: 122px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .nav-header ul li a {
+    font-size: 20px;
+    letter-spacing: 2px;
+  }
+
+  .nav-header ul li a:after {
+    content: ">";
+    width: 12px;
+    height: 12px;
+    color: white;
+    display: flex;
+    align-items: center;
+  }
+}
+@media (max-width: 768px) {
+  /* HEADER */
+  .container {
+    width: 768px;
+  }
+  .hidden-m {
+    display: none !important;
+  }
+  .chicha {
+    height: 115px;
+  }
+  .heading-text {
+    font-size: 40px;
+    line-height: 60px;
+    text-align: center;
+  }
+  .heading-text-container p {
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 2px;
+  }
+  .column-m {
+    flex-direction: column;
+  }
+  .heading-text-container {
+    margin-top: 0px;
+  }
+  .slider-container {
+    position: static;
+  }
+}
+
+@media (max-width: 420px) {
+  /* HEADER */
 }
