--- a/museum-adaptive/style.css
+++ b/museum-adaptive/style.css
@@ -1391,35 +1391,333 @@ footer::after {
 @media (max-width: 768px) {
   /* HEADER */
   .container {
-    width: 768px;
+    max-width: 768px;
   }
   .hidden-m {
     display: none !important;
   }
   .chicha {
-    height: 115px;
+    height: 120px;
   }
+  .burger-close {
+    margin-right: 39px;
+    margin-bottom: 13px;
+  }
+  .burger-open {
+    margin-right: 20px;
+    margin-bottom: 10px;
+  }
+  .logo-pic {
+    padding-left: 18px;
+  }
+
+  /* WELCOME */
   .heading-text {
     font-size: 40px;
     line-height: 60px;
+    /* text-align: center; */
+  }
+  .text-center {
     text-align: center;
   }
   .heading-text-container p {
+    padding-bottom: 45px;
+    /* text-align: center; */
     font-size: 20px;
     line-height: 23px;
     letter-spacing: 2px;
   }
+
   .column-m {
     flex-direction: column;
   }
   .heading-text-container {
-    margin-top: 0px;
+    /* margin-top: 0px; */
+    margin: 0 auto;
+    margin-top: -9px;
   }
   .slider-container {
+    margin: 0 auto;
     position: static;
+    width: 728px !important;
+  }
+  .pb-media {
+    padding-bottom: 96px;
+  }
+  .counter-pic {
+    height: 99px;
+    right: 110px;
+  }
+
+  /* VIRTUAL TOUR */
+  .h2-heading-768 {
+    margin-top: 40px;
+    padding-left: 19px;
+    margin-bottom: 63px;
+  }
+  .underline-title::after {
+    bottom: -23px;
+  }
+  .media-text-cards {
+    font-size: 22px;
+    line-height: 24px;
+    letter-spacing: 3px;
+  }
+  .media-cards {
+    gap: 39px 53px;
+    padding: 0 76px;
+  }
+  .card {
+    width: 280px;
+  }
+  .img-card {
+    width: 280px;
+    height: 180px;
+  }
+  .underline-card::after {
+    width: 54%;
+  }
+  .underline-card_::after {
+    width: 54%;
+  }
+  .card-paragraph {
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0;
+  }
+  .small-paragraph {
+    margin-top: 11px;
+  }
+  /* EXPLORE */
+  #Explore {
+    margin-top: 21px;
+    padding-top: 40px;
+  }
+  .display-none {
+    display: none;
+  }
+  .heading-text-768 {
+    padding-left: 19px;
+  }
+  .slider-container-explore {
+    width: 728px;
+    height: 705px;
+    margin: 0 auto;
+  }
+  .mb-106 {
+    margin-bottom: 63px;
+  }
+  /* VIDEO */
+  .section {
+    padding-bottom: 13px;
+  }
+
+  .mt-75 {
+    margin-top: 41px;
+  }
+  .player-container {
+    height: 389px;
+    margin: 0;
+    margin-top: 18px;
+    margin-bottom: 17px;
+  }
+  .player-container video {
+    height: 327px;
+  }
+  .big-play {
+    background-size: 80px 80px;
+    height: 80px;
+    background-repeat: no-repeat;
+    width: 80px;
+  }
+  .controls {
+    right: 20px;
+    height: 60px;
+    width: 728px;
+  }
+  .none-video {
+    display: none;
+  }
+  #Video {
+    padding-bottom: 19px;
+  }
+  .video-slider {
+    justify-content: space-evenly;
+  }
+  .video-slider > iframe {
+    width: 354px;
+    height: 199px;
+  }
+  .video-controls {
+    margin-top: 20px;
+  }
+  .circle-control {
+    width: 10px;
+    height: 10px;
+  }
+  .left-scroll,
+  .right-scroll {
+    width: 10px;
+    height: 12px;
+  }
+
+  /* GALLERY */
+  .gallery-img {
+    /* width: calc(50% - 12px); */
+    width: 352px;
+  }
+  .coll3-none {
+    display: none;
+  }
+  .picture-outer-container {
+    justify-content: right;
+    height: 1080px;
+    gap: 24px;
+  }
+  .gallery {
+    height: 1180px;
+  }
+  .gallery h2 {
+    padding-bottom: 40px;
+    padding-left: 19px;
+  }
+  #Gallery {
+    padding-top: 40px;
+  }
+
+  /* TICKETS */
+  #Tickets {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  #Tickets h2 {
+    padding-left: 19px;
+  }
+  .mb-103 {
+    margin-bottom: 63px;
+  }
+  .pic-tic {
+    width: 444px;
+    height: 340px;
+    padding-left: 19px;
+  }
+  .tickets-and-total {
+    padding-left: 35px;
+  }
+  .pic-and-ticket {
+    margin-bottom: 39px;
+  }
+  .ticket-amount {
+    padding-bottom: 39px;
+  }
+  .ticket-amount__senior {
+    padding-top: 26px;
+  }
+  .total {
+    margin: 38px 0 41px 25px;
+  }
+  .parallax {
+    height: 300px;
+  }
+  /* VIDEO */
+  .progress {
+    position: absolute;
+    width: 100%;
+    top: 0px;
+  }
+  .player-container video {
+    height: 328px;
+  }
+  .controls {
+    height: 56px;
+    bottom: 5px;
+  }
+  .progress::-webkit-slider-thumb {
+    width: 13px;
+    height: 13px;
+  }
+  .volume-progress {
+    width: 486px;
+    height: 5px;
+  }
+  .volume-progress::-webkit-slider-thumb {
+    width: 13px;
+    height: 13px;
+  }
+
+  /* CONTACTS */
+  #Contacts h2 {
+    padding-left: 19px;
+  }
+  .contacts-column {
+    flex-direction: column;
+  }
+  .name-museum {
+    font-size: 20px;
+    line-height: 23px;
+    padding-left: 20px;
+    padding-bottom: 41px;
+  }
+  .address-text {
+    font-size: 18px;
+    line-height: 21px;
+    padding-left: 20px;
+  }
+  .map-pic {
+    width: 728px;
+    height: 476px;
+  }
+  .map-container {
+    margin: 0 auto;
+    padding-top: 22px;
+  }
+
+  /* FOOTER */
+  .logo-foot {
+    padding-top: 42px;
+  }
+  .logo-pic {
+    padding-left: 23px;
+  }
+  footer::after {
+    top: 309px;
+    height: 1px;
+  }
+  .column-footer {
+    flex-direction: column;
+  }
+  .footer-nav {
+    padding-top: 62px;
+    margin-left: 99px;
+  }
+  .footer nav li a {
+    font-size: 18px;
+    line-height: 21px;
+  }
+  .footer ul {
+    margin: 0;
+  }
+  .pb-25 {
+    padding-bottom: 25px;
+  }
+  .footer-nav ul li:nth-child(4),
+  .footer-nav ul li:nth-child(5),
+  .footer-nav ul li:nth-child(6) {
+    margin-left: 91.5px;
+  }
+  .socials {
+    padding-top: 23px;
+    margin-left: 101px;
+  }
+  .footer-2 {
+    padding-top: 65px;
+    padding-bottom: 39px;
   }
 }
 
 @media (max-width: 420px) {
   /* HEADER */
+  .container {
+    max-width: 420px;
+  }
 }
