--- a/museum-adaptive/style.css
+++ b/museum-adaptive/style.css
@@ -1041,6 +1041,12 @@ footer::after {
   letter-spacing: 2px;
 }
 
+/* @media (max-width: 1440px) {
+  .gallery-img {
+    width: calc(99.3% - 18px);
+  }
+} */
+
 @media (max-width: 1024px) {
   /* HEADER */
   .container {
@@ -1052,6 +1058,7 @@ footer::after {
   .burger-menu {
     display: block;
   }
+
   /* WELCOME */
   .heading-text {
     font-size: 50px;
@@ -1254,6 +1261,7 @@ footer::after {
   .section {
     padding-bottom: 33px;
   }
+
   /* TICKETS */
   #Tickets {
     padding-top: 59px;
@@ -1373,7 +1381,7 @@ footer::after {
   .nav-header {
     opacity: 0;
     position: absolute;
-    top: 147px;
+    top: 148px;
     left: 59px;
     z-index: 500;
     transition: opacity 0.2s linear;
@@ -1410,6 +1418,7 @@ footer::after {
     align-items: center;
   }
 }
+
 @media (max-width: 768px) {
   /* HEADER */
   .container {
@@ -1422,7 +1431,7 @@ footer::after {
     height: 120px;
   }
   .burger-close {
-    margin-right: 39px;
+    margin-right: 17px;
     margin-bottom: 13px;
   }
   .burger-open {
@@ -1438,6 +1447,9 @@ footer::after {
     font-size: 40px;
     line-height: 60px;
     /* text-align: center; */
+  }
+  .nav-header {
+    top: 130px;
   }
   .text-center {
     text-align: center;
@@ -1740,7 +1752,68 @@ footer::after {
     padding-bottom: 39px;
   }
 }
+/* @media (min-width: 420px) and (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
 
+  .slider-container {
+    width: 100%;
+  }
+
+  .slider-container-explore {
+    width: 100%;
+    height: 100%;
+    min-height: 700px;
+  }
+
+  .video-slider {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .gallery-img {
+    width: 100%;
+  }
+
+  .pic-and-ticket {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .map-pic {
+    width: 100%;
+    height: auto;
+  }
+
+  .pic-tic {
+    width: 100%;
+    height: auto;
+    padding: 0;
+  }
+
+  .column-all {
+    flex-direction: column;
+  }
+
+  .footer-nav {
+    margin: 0 auto;
+  }
+
+  .socials {
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+
+  .footer-2-text {
+    font-size: 12px;
+  }
+
+  .ul-footer {
+    justify-content: space-evenly;
+  }
+}
+ */
 @media (max-width: 420px) {
   /* HEADER */
   .container {
@@ -2065,5 +2138,9 @@ footer::after {
   }
   .ul-footer {
     padding: 0 25px;
+  }
+
+  .slider-container-explore .slider {
+    overflow: hidden;
   }
 }
