--- a/museum-dom/style.css
+++ b/museum-dom/style.css
@@ -812,7 +812,7 @@ footer {
 footer::after {
   content: "";
   position: absolute;
-  top: 265px;
+  top: 328px;
   left: 0;
   width: 100vw;
   height: 3px;
@@ -930,11 +930,12 @@ footer::after {
   width: 100%;
   height: 100%;
   background-size: 720px 100%;
+  filter: saturate(1.3);
 }
 .slider-container-explore .background-img {
   background-image: url("./assets/img/explore-slider/after.jpeg");
 }
-.slider-container .foreground-img {
+.slider-container-explore .foreground-img {
   background-image: url("./assets/img/explore-slider/before.jpeg");
   width: 50%;
 }
@@ -942,9 +943,10 @@ footer::after {
   position: absolute;
   -webkit-appearance: none;
   appearance: none;
-  width: 100%;
+  width: calc(100% + 30px);
+  left: -15px;
   height: 100%;
-  background: rgba(242, 242, 242, 0.3);
+  background: transparent;
 
   outline: none;
   /* margin: 0; */
@@ -956,34 +958,44 @@ footer::after {
 .slider-container-explore .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 5px;
-  height: 700px;
+  /* 
+  
   background: white;
   color: transparent;
-  cursor: pointer;
+  /* cursor: pointer; */
+  width: 39px;
+  height: 700px;
+  background-image: url(./assets/img/explore-slider/handle.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.slider-container-explore .slider::-moz-range-thumb {
+/* .slider-container-explore .slider::-moz-range-thumb {
   width: 6px;
   height: 700px;
   background-color: transparent;
   cursor: pointer;
-}
+} */
 .slider-container-explore .slider-button {
   pointer-events: none;
   position: absolute;
-  width: 28px;
+  cursor: pointer;
+  color: transparent;
+
+  /* width: 28px;
   height: 28px;
   border-radius: 50%;
   margin: 0;
   background-color: transparent;
-  border: 5px solid white;
-  left: calc(62% - 22px);
-  top: calc(50% - 18px);
+  border: 5px solid white; */
+  height: 700px;
+  width: 39px;
+  left: calc(50% - 22px);
+  /* top: calc(50% - 18px); */
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.slider-container-explore .slider-button:after {
+/* .slider-container-explore .slider-button:after {
   content: "";
   display: flex;
   border-radius: 50%;
@@ -996,7 +1008,7 @@ footer::after {
   );
   background: -ms-radial-gradient(transparent 150px, rgba(0, 0, 0, 1) 150px);
   background: -o-radial-gradient(transparent 150px, rgba(0, 0, 0, 1) 150px);
-}
+} */
 .arrows {
   align-items: center;
   margin-right: 47px;
