--- a/museum-dom/style.css
+++ b/museum-dom/style.css
@@ -89,10 +89,18 @@ li {
   position: absolute;
   right: 0;
 }
-
+.filter {
+  width: 30%;
+  height: 812px;
+  background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  z-index: 1;
+  left: 438px;
+  position: absolute;
+  bottom: 0;
+}
 .heading-text-container {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   margin-bottom: 272px;
 }
 .burger-menu {
@@ -440,7 +448,15 @@ nav li a {
   padding-bottom: 0;
   overflow-y: hidden;
 }
-
+.slide-in {
+  opacity: 0;
+  transition: all 0.5s;
+  transform: translateY(30%) scale(0.81);
+}
+.slide-in._active {
+  opacity: 1;
+  transform: translateY(0%) scale(1);
+}
 .gallery h2 {
   margin: 0;
   padding-bottom: 77px;
