--- a/art-quiz/style.css
+++ b/art-quiz/style.css
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: "Gilroy";
-  src: url("./assets/fonts/GilroyBold.ttf");
+  font-family: 'Gilroy';
+  src: url('./assets/fonts/GilroyBold.ttf');
   font-style: normal;
   font-weight: bold;
 }
 @font-face {
-  font-family: "Gilroy";
-  src: url("./assets/fonts/GilroyMedium.ttf");
+  font-family: 'Gilroy';
+  src: url('./assets/fonts/GilroyMedium.ttf');
   font-style: normal;
   font-weight: normal;
 }
@@ -20,7 +20,7 @@
 body {
   min-width: 360px;
   /* min-height: 100vh; */
-  font-family: "Gilroy", sans-serif;
+  font-family: 'Gilroy', sans-serif;
   font-size: 34px;
   color: #ffffff;
   background-color: #0c0606;
@@ -31,13 +31,17 @@ body {
 .hidden {
   display: none;
 }
+#valueTimer {
+  width: 70px;
+}
+
 .settings-icon {
   position: absolute;
   top: 22px;
   right: 22px;
   width: 34px;
   height: 34px;
-  background-image: url("./assets/svg/settings.svg");
+  background-image: url('./assets/svg/settings.svg');
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -64,7 +68,7 @@ body {
   }
 
   .welcome-page-block .container {
-    background-image: url("./assets/main-page/j-retrato-de-cardenal-rafael 1.png");
+    background-image: url('./assets/main-page/j-retrato-de-cardenal-rafael 1.png');
     display: flex;
     margin: 0 auto;
     flex-direction: column;
@@ -88,7 +92,7 @@ body {
     width: 166px;
     height: 62px;
     margin: 0 auto;
-    background-image: url("./assets/svg/logo.svg");
+    background-image: url('./assets/svg/logo.svg');
     background-color: transparent;
     border: none;
     background-repeat: no-repeat;
@@ -113,7 +117,7 @@ body {
   .link-school {
     width: 61px;
     height: 23px;
-    background-image: url("./assets/svg/rs_school.svg");
+    background-image: url('./assets/svg/rs_school.svg');
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -138,7 +142,7 @@ body {
     left: 12px;
     width: 34px;
     height: 34px;
-    background-image: url("./assets/svg/left_arrow.svg");
+    background-image: url('./assets/svg/left_arrow.svg');
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -174,11 +178,14 @@ body {
   .volume-button {
     width: 42px;
     height: 35px;
-    background-image: url("./assets/svg/mute.svg");
+    background-image: url('./assets/svg/volume.svg');
     background-color: transparent;
     border: none;
     cursor: pointer;
     background-repeat: no-repeat;
+  }
+  .volume-mute {
+    background-image: url('./assets/svg/mute.svg');
   }
   .volume-slider {
     width: 230px;
@@ -226,7 +233,7 @@ body {
     margin-bottom: 8%;
   }
   .switch span:after {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     width: 4px;
@@ -236,7 +243,7 @@ body {
     transition: all 0.2s ease;
   }
 
-  input[type="radio"] {
+  input[type='radio'] {
     display: none;
   }
   .switch label {
@@ -246,12 +253,12 @@ body {
     line-height: 50px;
     transition: all 0.2s ease;
   }
-  label[for="yes"] {
+  label[for='yes'] {
     position: absolute;
     left: 0px;
     height: 20px;
   }
-  label[for="no"] {
+  label[for='no'] {
     position: absolute;
     right: 0px;
   }
@@ -268,10 +275,10 @@ body {
     margin-top: -8px;
     margin-left: 8px;
   }
-  #yes:checked ~ .switch label[for="yes"] {
+  #yes:checked ~ .switch label[for='yes'] {
     color: #fff;
   }
-  #no:checked ~ .switch label[for="no"] {
+  #no:checked ~ .switch label[for='no'] {
     color: #fff;
   }
   .time-checkbox {
@@ -322,6 +329,7 @@ body {
   }
 
   .settings-block .footer {
-    bottom: -37px;
+    position: relative;
+    padding-top: 18px;
   }
 }
