--- a/art-quiz/style.css
+++ b/art-quiz/style.css
@@ -61,8 +61,7 @@ body {
   color: inherit;
   background-color: transparent;
   border-radius: 56px;
-  border-width: 1px;
-  border-color: #ffffff;
+  border: 1px solid #ffffff;
   cursor: pointer;
   font-size: 24px;
   letter-spacing: -0.4px;
@@ -633,7 +632,9 @@ body {
   .opacity {
     opacity: 0.2;
   }
-
+  .visibility {
+    visibility: hidden;
+  }
   .hidden {
     display: none;
     /* height: 500px;
