--- a/art-quiz/style.css
+++ b/art-quiz/style.css
@@ -129,7 +129,7 @@ body {
     bottom: 9px;
     justify-content: space-around;
 
-    font-size: 14px;
+    font-size: 16px;
     letter-spacing: -0.63px;
     font-size: normal;
     font-weight: 500;
@@ -312,7 +312,9 @@ body {
     width: 33px;
     height: 33px;
     border-radius: 50%;
+    border: 1px solid #ffffff;
     font-size: 28px;
+    cursor: pointer;
   }
 
   .left-btn:hover {
@@ -367,7 +369,6 @@ body {
   .color-logo {
     width: 166px;
     height: 62px;
-    /* margin: 0 auto; */
     margin-top: 25px;
     margin-bottom: 27px;
     background-image: url('./assets/svg/color-logo.svg');
@@ -379,9 +380,15 @@ body {
     width: 50%;
     margin-bottom: 20px;
   }
+
+  .category img:hover {
+    transform: scale(1.1);
+    transition: all 0.5s ease;
+  }
   .header-round {
     padding: 0 15px 8px 15px;
     display: flex;
+    align-items: end;
     justify-content: space-between;
     font-size: 16px;
     letter-spacing: -0.5px;
@@ -394,7 +401,6 @@ body {
 
   .artist-quiz-block-inner {
     overflow: auto;
-    /* max-height: 400px; */
   }
   .header-logo {
     display: flex;
@@ -651,6 +657,53 @@ body {
   .visibility {
     visibility: hidden;
   }
+  .round-result-block {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .template-inner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .score-round {
+    color: #ffbca2;
+  }
+  .back-round {
+    display: flex;
+    align-items: center;
+    margin: 34px 0 45px 10px;
+    font-size: 24px;
+  }
+  .arrow {
+    width: 34px;
+    height: 34px;
+    background-image: url(./assets/svg/left_arrow.svg);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    background-repeat: no-repeat;
+  }
+
+  .preview {
+    width: 155px;
+    height: 165px;
+    margin: 0 auto 20px auto;
+  }
+  .star {
+    width: 22px;
+    height: 22px;
+    background-image: url(./assets/svg/star.svg);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    transition: 0.3s;
+  }
+  .star:hover {
+    filter: drop-shadow(1px 1px 4px white);
+  }
 }
 
 @media (min-width: 380px) {
@@ -673,9 +726,9 @@ body {
     margin-bottom: 75px;
   }
 
-  header-round {
+  /* .header-round {
     padding: 0 15px 8px 15px;
-  }
+  } */
 }
 
 @media (min-width: 550px) {
@@ -684,7 +737,10 @@ body {
   }
   .header-round {
     padding: 0 62px 18px 62px;
-    font-size: 20px;
+    font-size: 2 0px;
+  }
+  .footer {
+    font-size: 24px;
   }
 }
 
@@ -711,6 +767,12 @@ body {
   .header-round {
     padding: 10px 85px 24px 85px;
     font-size: 25px;
+  }
+  .check-answer {
+    width: 434 px;
+  }
+  .buttons button {
+    font-size: 49px;
   }
 }
 
